# qml-quansistor-entropy

./: .gitignore  diagnose_training.py  encode_dag.py  example_visualization.py  generate_dags.py  generate_data.py  generate_data.sh  generate_dataset.py  generate_dataset.sh  generate_pred_datasets.py  generate_pred_datasets.sh  grid_search.sh  grid_search_gnn.py  jobs.sh  main.py  main.sh  nn_optuna_study.db  optuna_search.py  optuna_search_gnn.sh  optuna_search_nn.sh  predictions.py  predictions.sh  pyproject.toml  pytest.ini  requirements.txt  train_gnn.py  train_gnn.sh
global_outputs/predictions/: predictions.csv
logs/: app.log.2026-01-29  app.log.2026-02-02  app.log.2026-02-03  app.log.2026-02-04  app.log.2026-02-06  app.log.2026-02-10  app.log.2026-02-11  app.log.2026-02-12  app.log.2026-02-13  app.log.2026-02-18  app.log.2026-02-19  app.log.2026-03-03  app.log.2026-03-05  app.log.2026-03-06  app.log.2026-03-09  app.log.2026-03-10  app.log.2026-03-13  app.log.2026-03-16  app.log.2026-03-19  app.log.2026-03-20  app.log.2026-03-24  app.log.2026-03-26  app.log.2026-03-27  app.log.2026-03-30  app.log.2026-04-01  app.log.2026-04-02  app.log.2026-04-03  app.log.2026-04-08  app.log.2026-04-13  generate_data.err  generate_data_exact.err  generate_data_exact.out  generate_data_fwht.err  generate_data_fwht.out  generate_data_haar.err  generate_dataset.err  generate_dataset_15.err  generate_dataset_full.err  generate_dataset_quansistor.err  generate_pred_dataset_full.err  (+9 more)
models/: GNN_model_huber_random_v1.pt  GNN_model_huber_random_v2.pt  MLP_model_mse_global.pt  MLP_model_mse_random.pt  MLP_model_mse_random_v1.pt  MLP_model_mse_random_v2.pt  gnn_huber_random.pt  gnn_huber_random_v1.pt  gnn_huber_random_v2.pt  gnn_model_mse_clifford.pt  gnn_model_mse_global.pt  gnn_model_mse_random.pt  nn_huber_random.pt  nn_huber_random_v1.pt  nn_model_clifford.pt  nn_model_global.pt  nn_model_haar.pt  nn_model_huber_clifford.pt  nn_model_huber_global.pt  nn_model_huber_haar.pt  nn_model_huber_haar_v1.pt  nn_model_huber_quansistor.pt  nn_model_huber_random.pt  nn_model_huber_random_v1.pt  nn_model_huber_random_v2.pt  nn_model_huber_random_v3.pt  nn_model_mse_clifford.pt  nn_model_mse_clifford_v1.pt  nn_model_mse_global.pt  nn_model_mse_global_v1.pt  nn_model_mse_global_v2.pt  nn_model_mse_haar.pt  nn_model_mse_haar_v1.pt  nn_model_mse_haar_v2.pt  nn_model_mse_haar_v3.pt  nn_model_mse_haar_v4.pt  nn_model_mse_haar_v5.pt  nn_model_mse_haar_v6.pt  nn_model_mse_haar_v7.pt  nn_model_mse_quansistor.pt  (+8 more)
notebooks/: 02_19_2026.ipynb  03_04_2026.ipynb  03_12_2026.ipynb  03_31_2026.ipynb  04_03_2026.ipynb  04_07_2026.ipynb  04_15_2026.ipynb  04_16_2026.ipynb  04_20_2026.ipynb  04_22_2026.ipynb  04_23_2026.ipynb  04_23_2026_2.ipynb  04_25_2026.ipynb  04_29_2026.ipynb  04_29_2026_2.ipynb  04_30_2026.ipynb  05_01_2026.ipynb  05_05_2026.ipynb  05_06_2026.ipynb  07_04_2026.ipynb  12_03_2026.ipynb  17-03-2026.ipynb  18_02_2026.ipynb  230126.ipynb  23_01_26.ipynb  24_02_2026.ipynb  25_03_2026.ipynb  26_02_2026.ipynb  27_02_2026.ipynb  31_03_2026.ipynb  deep_MLP_model.pt  dummy_MLP_model.pt  dummy_MLP_model2.pt  dummy_MLP_model_2.pt  dummy_model.pt  dummy_model_2.pt  dummy_regressor_model.pt  dummy_regressor_model3.pt  dummy_regressor_model4.pt  gnn_optuna_study.db  (+2 more)
qml_quansistor_entropy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qqe/: .gitignore  optuna_studies.db  pyproject.toml
qqe/GNN/: __init__.py  circuit_to_graph.py  dataset_builder.py  encoder.py  gnn_data.py  physics_aware_NN.py
qqe/backend/: __init__.py  base.py  pennylane.py  pennylane_backend.py  quimb.py
qqe/circuit/: DAG.py  __init__.py  families.py  gates.py  patterns.py  spec.py
qqe/data/: encoding_data_random.json  sre_data_quimb_exact.json  sre_data_quimb_fwht.json
qqe/experiments/: __init__.py  core.py  plotting.py  registry.py  sweeper.py
qqe/notebooks/: 03_12_2026.ipynb  03_17_2026.ipynb  04_24_2026.ipynb  05_07_2026.ipynb  05_09_2026.ipynb  05_12_2026.ipynb  05_14_2026.ipynb  05_18_2026.ipynb  05_19_2026.ipynb  05_20_2026.ipynb  05_21_2026.ipynb  05_25_2026.ipynb  05_26_2026.ipynb  05_27_2026.ipynb  06_01_2026.ipynb  06_03_2026.ipynb  06_04_2026.ipynb  06_09_2026.ipynb  06_15_2026.ipynb  06_18_2026.ipynb  06_22_2026.ipynb  06_24_2026.ipynb  06_25_2026.ipynb  06_29_2026.ipynb  SRE_distribution_2.ipynb  SRE_distributions.ipynb  final.ipynb  optuna_studies.db
qqe/parallel/: __init__.py  dask,py  dask.py
qqe/properties/: SRE.py  __init__.py  compute.py  entanglement_entropy.py
qqe/qml_quansistor_entropy.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
qqe/rng/: __init__.py  seeds.py
qqe/scripts/: __init__.py  generate_dataset.py  generate_pred_datasets.py  optuna_search.py  predictions.py  simulate_circuits.py  train_model.py
qqe/src/: __init__.py
qqe/tests/: test_gates.py  test_imports.py  test_specs.py
qqe/utils/: __init__.py  reading.py
scripts/: generate_dataset.py  generate_pred_datasets.py  optuna_search.py  predictions.py  train_model.py
src/GNN/: DAG.py
src/backend/: __init__.py  base.py  pennylane_backend.py  (+1 more)
tests/: conftest.py  test_brickwork.py  test_gnn_training_config.py  test_gnn_training_datasets.py  test_gnn_training_runners.py  test_gnn_training_train.py  test_gnn_training_utils.py  test_seeds.py  test_sre_exact_dense.py  test_train_gnn.py
(+1330 files in other folders)
