[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qml-quansistor-entropy"
version = "0.1.0"
description = "Quantum machine learning with quansistor and entropy analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Victor Lambert", email = "victor.lambert@umontreal.ca"}
]
keywords = ["quantum", "machine-learning", "entropy"]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "pennylane>=0.24.0",
    "matplotlib>=3.4.0",
    "quimb>=1.5.0",
    "dask>=2021.10.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.200",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
packages = ["qqe"]

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
known_first_party = ["qqe"]


[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "RUF",   # Ruff-specific rules
    "ASYNC", # flake8-async
    "BLE",   # flake8-blind-except
    "COM",   # flake8-commas
    "C90",   # mccabe
    "D",     # pydocstyle
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T10",   # flake8-debugger
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "INT",   # flake8-gettext
    "TRY",   # tryceratops
    "FBT",   # flake8-boolean-trap
    "LOG",   # flake8-logging
    "PERF",  # perflint
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by Black)
]

[tool.ruff.lint.isort]
known-first-party = ["qqe"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff]
fix=true